--- a/index.html
+++ b/index.html
@@ -6,8 +6,74 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 </head>
 <body>
-    Hello Aditya
+    <!-- container starts -->
+    <div class="container">
+        <!-- header stated  -->
+        <header class="header">
+
+            <!-- logo starts  -->
+            <span class="logo">
+                <i class="fab fa-accusoft fa-5x"></i>
+            </span>
+            <!-- logo ends  -->
+
+            <!-- form starts -->
+            <form action="" class="search">
+                <input class="search__textbox" type="search" name="" id="" placeholder="Search Hotels..">
+                <button class="search__button">
+                    <svg class="search__icon">
+                        <use xlink:href="./img/sprite.svg#icon-search"></use>
+                    </svg>
+                </button>
+            </form>
+            <!-- form ends -->
+
+            <!-- user_nav starts -->
+            <nav class="user_nav">
+                <div class="user_nav__icon_box">
+                    <svg class="user_nav__icon">
+                        <use xlink:href="./img/sprite.svg#icon-bookmark"></use>
+                        <span class="user_nav__icon_notification">5</span>
+                    </svg>
+                </div>
+                <div class="user_nav__icon_box">
+                    <svg class="user_nav__icon">
+                        <use xlink:href="./img/sprite.svg#icon-message"></use>
+                        <span class="user_nav__icon_notification">12</span>
+                    </svg>
+                </div>
+                <div class="user_nav__user_box">
+                    <img src="./img/profile.jpg" alt="" class="user_nav__user_image">
+                    <span class="user_nav__user_name">Aditya</span>
+                </div>
+            </nav>
+            <!-- user-nav ends -->
+
+        </header>
+        <!-- header ends  -->
+
+        <!-- content_flex starts -->
+        <div class="content_flex">
+
+                <!-- aside starts  -->
+                <aside class="aside_main_navigation">
+                   navigation
+                </aside>
+                <!-- aside ends  -->
+
+                <!-- main_content starts  -->
+                <section class="main_content">
+                    main_content
+                </section>
+                <!-- main_content ends   -->
+
+        </div>
+        <!-- content_flex ends -->
+
+    </div>
+    <!-- container ends  -->
 </body>
 </html>
